@@ -1736,15 +1736,15 @@ present) un-delayed.
 The following (one long) command plays a chime sound:
 .EX
 .ne 3
-   play -n synth sin %3 sin %-2 sin %-5 sin %-9 \\
+   play -n synth -j 3 sin %3 sin %-2 sin %-5 sin %-9 \\
 	sin %-14 sin %-21 fade h .01 2 1.5 delay \\
 	1.3 1 .76 .54 .27 remix - fade h 0 2.7 2.5 norm -1
 .EE
 and this plays a guitar chord:
 .EX
 .ne 2
-   play -n synth pl %-26 pl %-22 pl %-19 pl %-14 pl %-7 pl \\
-	%-2 delay 0 .05 .1 .15 .2 .25 remix - fade 0 4 .1 norm -1
+   play -n synth -j -2  pl %-26 pl %-22 pl %-19 pl %-14 pl %-7 \\
+	pl %-2 delay 0 .05 .1 .15 .2 .25 remix - fade 0 4 .1 norm -1
 .EE
 .TP
 \fBdither\fR [\fB\-a\fR] [\fB\-S\fR\^|\^\fB\-s\fR\^|\^\fB\-f \fIfilter\fR]
@@ -3455,7 +3455,7 @@ See also the
 .B tempo
 effect.
 .TP
-\fBsynth\fR [\fB\-n\fR] [\fIlen\fR] {[\fItype\fR] [\fIcombine\fR] [[\fB%\fR]\fIfreq\fR[\fBk\fR][\fB:\fR\^|\^\fB+\fR\^|\^\fB/\fR\^|\^\fB\-\fR[\fB%\fR]\fIfreq2\fR[\fBk\fR]]] [\fIoff\fR] [\fIph\fR] [\fIp1\fR] [\fIp2\fR] [\fIp3\fR]}
+\fBsynth\fR [\fB\-j \fIKEY\fR] [\fB\-n\fR] [\fIlen\fR] {[\fItype\fR] [\fIcombine\fR] [[\fB%\fR]\fIfreq\fR[\fBk\fR][\fB:\fR\^|\^\fB+\fR\^|\^\fB/\fR\^|\^\fB\-\fR[\fB%\fR]\fIfreq2\fR[\fBk\fR]]] [\fIoff\fR] [\fIph\fR] [\fIp1\fR] [\fIp2\fR] [\fIp3\fR]}
 This effect can be used to generate fixed or swept frequency audio tones
 with various wave shapes, or to generate wide-band noise of various
 `colours'.
@@ -3497,7 +3497,7 @@ to create a more complex waveform:
    sox -n output.wav synth 0.5 sine 200-500 \\
 	synth 0.5 sine fmod 700-100
 .EE
-Frequencies can also be given as a number of equal temperament semitones
+Frequencies can also be given as a number of semitones
 relative to `middle A' (440\ Hz) by prefixing a `%' character;  for
 example, the following could be used to help tune a guitar's low `E'
 string:
@@ -3510,9 +3510,6 @@ or with a (Bourne shell) loop, the whole guitar:
    for s in -29 -24 -19 -14 -10 -5; do \\
 	play -n synth 4 pluck %$s repeat 2; done
 .EE
-Note that, at this time, temperaments other than equal can only be
-obtained by using the frequency notation.
-.SP
 .B N.B.
 This effect generates audio at maximum volume (0dBFS), which means that there
 is a high chance of clipping when using the audio subsequently, so
@@ -3548,8 +3545,16 @@ for specifying sample counts is the number of samples with the letter
 (frequency modulation); default=create
 .SP
 \fIfreq\fR/\fIfreq2\fR are the frequencies at the beginning/end of
-synthesis in Hz or, if preceded with `%', equal temperament semitones
-relative to A (440\ Hz); for both, default=%0.  If
+synthesis in Hz or, if preceded with `%', semitones relative to A
+(440\ Hz); for both, default=%0.  By default, the tuning used for the
+semitone notation is equal temperament; the
+.B \-j
+.I KEY
+option selects just intonation, where
+.I KEY
+is an integer number of semitones relative to A.
+So for example, \-8 or 4 selects the key of C.
+If
 .I freq2
 is given, then
 .I len
