@@ -82,7 +82,8 @@ void lsx_generate_wave_table(
     double max,         /* Maximum value on the y-axis. (e.g. +1) */
     double phase);      /* Phase at 1st point; 0..2pi. (e.g. pi/2 for cosine) */
 char const * lsx_parsesamples(sox_rate_t rate, const char *str, size_t *samples, int def);
-double lsx_parse_frequency(char const * text, char * * end_ptr);
+double lsx_parse_frequency_k(char const * text, char * * end_ptr, int key);
+#define lsx_parse_frequency(a, b) lsx_parse_frequency_k(a, b, INT_MAX)
 FILE * lsx_open_input_file(sox_effect_t * effp, char const * filename);
 
 void lsx_prepare_spline3(double const * x, double const * y, int n,
